# open-gl-lernen

erstes projeckt/: .gitignore  CMakeLists.txt  main.cpp
erstes projeckt/HeaderFiles/: Camera.h  EBO.h  Texture.h  VAO.h  VBO.h  shaderClass.h
erstes projeckt/include/glad/: glad.h
erstes projeckt/res/Shaders/: default.frag  default.vert  light.frag  light.vert
erstes projeckt/src/: Camera.cpp  EBO.cpp  Texture.cpp  VAO.cpp  VBO.cpp  glad.c  main.cpp  shaderClass.cpp
template/: CMakeLists.txt  build.bat  main.cpp
template/src/: glad.c
